# python-apispec-fromfile

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  MAINTAINERS  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-release.yml  tests.yml
src/apispec_fromfile/: __init__.py  plugin.py
tests/: my-spec-file.yml  test_fromfile.py  test_live_reload.py
